set(PROMETHEUS_ROOT
  ${CMAKE_SOURCE_DIR}/src/${PROMETHEUS_LANG}
)

add_subdirectory(File)
add_subdirectory(FileHeader)
add_subdirectory(FileSource)

file(GLOB PROMETHEUS_SOURCES_PUBLIC ${PROMETHEUS_ROOT}/public/src/*.cpp)
file(GLOB PROMETHEUS_HEADERS_PUBLIC ${PROMETHEUS_ROOT}/public/include/*.hpp)
set(PROMETHEUS_INCLUDEDIR_PUBLIC ${PROMETHEUS_ROOT}/public/include)

add_library(prometheus STATIC
  ${FILE_SOURCES}
  ${FILE_HEADERS}
  ${FILEHEADER_SOURCES}
  ${FILEHEADER_HEADERS}
  ${FILESOURCE_SOURCES}
  ${FILESOURCE_HEADERS}
)

target_precompile_headers(prometheus REUSE_FROM pch)

target_include_directories(prometheus
  PUBLIC ${FILE_INCLUDEDIR_PUBLIC}
  PUBLIC ${FILEHEADER_INCLUDEDIR_PUBLIC}
  PUBLIC ${FILESOURCE_INCLUDEDIR_PUBLIC}
  PUBLIC ${PROMETHEUS_INCLUDEDIR_PUBLIC}
)
