set(PROMETHEUS_ROOT
  ${CMAKE_SOURCE_DIR}/src/${PROMETHEUS_LANG}
)

add_subdirectory(File)

file(GLOB PROMETHEUS_SOURCES_PRIVATE ${PROMETHEUS_ROOT}/private/src/*.cpp)
file(GLOB PROMETHEUS_HEADERS_PRIVATE ${PROMETHEUS_ROOT}/private/include/*.hpp)
set(PROMETHEUS_INCLUDEDIR_PRIVATE ${PROMETHEUS_ROOT}/private/include)

file(GLOB PROMETHEUS_HEADERS_PUBLIC ${PROMETHEUS_ROOT}/public/include/*.hpp)
file(GLOB PROMETHEUS_SOURCES_PUBLIC ${PROMETHEUS_ROOT}/public/src/*.cpp)
set(PROMETHEUS_INCLUDEDIR_PUBLIC ${PROMETHEUS_ROOT}/public/include)

add_library(prometheus STATIC
  ${PROMETHEUS_SOURCES_PRIVATE}
  ${PROMETHEUS_HEADERS_PRIVATE}
  ${PROMETHEUS_HEADERS_PUBLIC}
  ${PROMETHEUS_SOURCES_PUBLIC}

  ${FILE_SOURCES}
  ${FILE_HEADERS}
  ${FILEHEADER_SOURCES}
  ${FILEHEADER_HEADERS}
  ${FILESOURCE_SOURCES}
  ${FILESOURCE_HEADERS}
)

target_precompile_headers(prometheus REUSE_FROM pch)

target_include_directories(prometheus
  PRIVATE ${PROMETHEUS_INCLUDEDIR_PRIVATE}

  PUBLIC ${FILE_INCLUDEDIR_PUBLIC}
  PUBLIC ${FILEHEADER_INCLUDEDIR_PUBLIC}
  PUBLIC ${FILESOURCE_INCLUDEDIR_PUBLIC}
  PUBLIC ${PROMETHEUS_INCLUDEDIR_PUBLIC}
)

target_link_libraries(prometheus pthread)